2000-01-25  Ettore Perazzoli  <ettore@helixcode.com>

	* htmldrawqueue.c (draw_obj): Don't draw the cursor here as the
	idle loop handler will take care of it.

	* gtkhtml.c (key_press_event): Don't move the cursor forward when
	inserting text, as `html_engine_insert()' now does this.

	* htmlengine-edit.c (html_engine_insert): Move the cursor forward.

2000-01-24  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlimage.c (accepts_cursor): New function, implementation of
	`HTMLObject::accepts_cursor'.  It always returns `TRUE', so that
	we can actually move the cursor to an image and edit it.
	(html_image_class_init): Install it.

	* htmlengine-edit.c (merge_text_at_cursor): Fix merging.

	* htmlcursor.c (html_cursor_dup): New function to duplicate a
	cursor.

	* gtkhtml.c (focus_in_event): New function, implementation for
	`GtkWidget::focus_in_event'.
	(focus_out_event): New function, implementation for
	`GtkWidget::focus_out_event'.
	(class_init): Install these.
	(button_press_event): Grab the focus.

	* htmlobject.c (relayout): If the object has no parent and has
	shrunk, queue a clear for the area that is not covered by the
	object anymore.

	* htmlengine.c (html_engine_queue_clear): New function.

	* htmldrawqueue.c (html_draw_queue_add_clear): New function.
	(html_draw_queue_add_clear_with_background): New function.
	(clear): New static function to clear an area specified by an
	HTMLClearElement.
	(html_draw_queue_flush): Flush the clear queue as well.
	(html_draw_queue_add): Emit the "draw_pending" signal only if the
	clear queue is empty too.
	(clear_element_new): New static function to create a clear element
	with a solid color background.
	(clear_element_new_with_background): New static function to create
	a clear element with a pixmap background.
	(clear_element_destroy): New static function to destroy a clear
	element.

	* htmldrawqueue.h: Added an HTMLClearElement queue for erasing
	parts of the window.
